# wasm-contract-mpc-multisig

./: README.md
.github/workflows/: check.yml
crates/mpc_ecdsa/: Cargo.toml
crates/mpc_ecdsa/src/: gg20.rs  lib.rs
crates/mpc_ecdsa/src/gg20/: blame.rs  party_i.rs  tests.rs
crates/mpc_ecdsa/src/utilities/: mta.rs  zk_pdl_with_slack.rs
crates/state_machine/: Cargo.toml
crates/state_machine/examples/: common.rs  gg20_keygen.rs  gg20_signing.rs
crates/state_machine/src/: lib.rs
crates/state_machine/src/gg20/: keygen.rs  sign.rs
crates/state_machine/src/gg20/keygen/: rounds.rs
crates/state_machine/src/gg20/sign/: fmt.rs  rounds.rs
