[package]
name = "state_machine"
version = "0.1.0"
edition = "2021"

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[dependencies]
mpc_ecdsa = { path = "../mpc_ecdsa" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curv-kzen = { version = "0.9", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
sha2 = "0.9"
thiserror = "1.0.23"
libsecp256k1 = "~0.7"
round-based = { version = "0.1.4", features = [] }

anyhow = "1"
aes-gcm = "0.9.4"
futures = "0.3"
rand = "0.8"
structopt = "0.3"
reqwest = { version = "~0.11", default-features = false, features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
surf = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
async-sse = "5"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true

[dev-dependencies]
round-based = { version = "0.1.4", features = ["dev"] }